# lemonade-home

./: .env  .gitignore  Makefile  README.md  pyproject.toml
scripts/: generate-data.py  start-db.sh
src/: main.py  step1_ingestion.py  step2_aggs.py
src/models/: vehicle_events.py  vehicle_status.py
src/utils/: cassandra.py  cluster_config.py  spark.py
